refactor code smells